--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "jest": {
     "preset": "jest-preset-angular",
+    "collectCoverage": true,
     "setupFilesAfterEnv": [
       "<rootDir>/src/setupJest.ts"
     ],
