--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/effects": "^10.0.1",
     "@ngrx/store": "^10.0.1",
     "@polymer/lit-element": "^0.7.1",
+    "i18next": "^19.8.2",
     "lit-element": "^2.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
