--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "resolveJsonModule":true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "importHelpers": true,
