Implementation of storybook

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,8 +3,11 @@
   "emitDecoratorMetadata": true,
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
+    "allowJs": true,
     "types": [
       "jest",
+      "jquery",
+      "jsdom",
       "node"
     ]
   },
