--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
+    "storybook": "npm run docs:json && start-storybook -p 6006",
+    "build-storybook": "npm run docs:json && build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -33,12 +36,20 @@
     "@angular-devkit/build-angular": "~0.1001.7",
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
+    "@babel/core": "^7.12.3",
+    "@compodoc/compodoc": "^1.1.11",
+    "@storybook/addon-actions": "^6.0.27",
+    "@storybook/addon-essentials": "^6.0.27",
+    "@storybook/addon-links": "^6.0.27",
+    "@storybook/angular": "^6.0.27",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.11.1",
+    "babel-loader": "^8.1.0",
     "codelyzer": "^6.0.0",
     "jest": "^26.6.0",
     "jest-preset-angular": "^8.3.1",
     "protractor": "~7.0.0",
+    "react-is": "^17.0.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
@@ -46,14 +57,27 @@
   "jest": {
     "preset": "jest-preset-angular",
     "collectCoverage": true,
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupJest.ts"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/node_modules/",
-      "<rootDir>/dist/",
-      "<rootDir>/src/test.ts"
-    ],
+    "setupFilesAfterEnv":
+      [
+        "<rootDir>/src/setupJest.ts"
+      ],
+    "testPathIgnorePatterns":
+      [
+        "<rootDir>/node_modules/",
+        "<rootDir>/dist/",
+        "<rootDir>/storybook-static/",
+        "<rootDir>/src/test.ts"
+      ],
+    "coveragePathIgnorePatterns":
+      [
+        "/jest-config/",
+        "/node_modules/"
+      ],
+    "snapshotSerializers":
+      [
+        "<rootDir>/node_modules/jest-preset-angular/AngularSnapshotSerializer.js",
+        "<rootDir>/node_modules/jest-preset-angular/HTMLCommentSerializer.js"
+      ],
     "globals": {
       "ts-jest": {
         "tsConfig": "<rootDir>/tsconfig.spec.json",
